# omne-runtime

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/actions/checkout-foundation/: action.yml
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  docs-pages.yml  perf-safety.yml  release.yml  secrets-secondary.yml
crates/omne-archive-primitives/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/omne-archive-primitives/docs/: docs-system-map.md
crates/omne-archive-primitives/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-archive-primitives/src/: archive_tree.rs  binary_archive.rs  lib.rs
crates/omne-artifact-install-primitives/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/omne-artifact-install-primitives/docs/: docs-system-map.md
crates/omne-artifact-install-primitives/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-artifact-install-primitives/src/: archive_tree.rs  artifact_download.rs  binary_artifact.rs  install_lock.rs  lib.rs
crates/omne-execution-gateway/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
crates/omne-execution-gateway/docs/: docs-system-map.md  index.md
crates/omne-execution-gateway/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-execution-gateway/docs/getting-started/: index.md  quickstart.md
crates/omne-execution-gateway/docs/guides/: ai-agent-integration.md  audit-events.md  index.md  isolation-semantics.md  policy-model.md  security-notes.md
crates/omne-execution-gateway/docs/reference/: api-reference.md  cli-usage.md  governance-versioning.md  index.md
crates/omne-execution-gateway/src/: audit.rs  audit_log.rs  error.rs  gateway.rs  lib.rs  os_json.rs  os_serialization.rs  path_guard.rs  policy.rs  types.rs
crates/omne-execution-gateway/src/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
crates/omne-fs/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  policy.example.toml
crates/omne-fs-primitives/: CHANGELOG.md  Cargo.toml  README.md
crates/omne-fs-primitives/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-fs-primitives/src/: advisory_lock.rs  ambient_file.rs  atomic_write.rs  cap_root.rs  lib.rs  path_identity.rs
crates/omne-fs/benches/: perf_ops.rs
crates/omne-fs/cli/: Cargo.toml
crates/omne-fs/cli/src/: command_exec.rs  error.rs  input.rs  main.rs  tests.rs
crates/omne-fs/docs/: cli-reference.md  concepts.md  db-vfs.md  deployment-and-ops.md  docs-system-map.md  example-survey.md  faq.md  fs-boundary-follow-up.md  fs-primitives-boundary-adr.md  fs-primitives-consolidation-checklist.md  getting-started.md  index.md  library-reference.md  operations-reference.md  policy-reference.md  process-primitives-boundary-adr.md  release-notes-risk-boundary-2026h1.md  secrets-gate.md  security-guide.md
crates/omne-fs/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-fs/scripts/: gate.sh
crates/omne-fs/src/: error.rs  lib.rs  path_utils.rs  platform_open.rs  policy.rs  policy_io.rs  redaction.rs
crates/omne-fs/src/ops/: context.rs  copy_file.rs  delete.rs  edit.rs  git_permissions.rs  glob.rs  grep.rs  io.rs  list_dir.rs  mkdir.rs  mod.rs  move_path.rs  patch.rs  path_validation.rs  read.rs  resolve.rs  stat.rs  tests.rs  transfer.rs  traversal.rs  write.rs
crates/omne-fs/src/ops/resolve/: dir_ops.rs
crates/omne-fs/src/platform/: mod.rs  rename.rs  unix_metadata.rs  windows_path_compare.rs
crates/omne-fs/tests/: delete.rs  edit_patch.rs  git_permissions.rs  git_permissions_env.rs  glob.rs  grep.rs  grep_non_utf8.rs  grep_symlink_dir.rs  new_ops.rs  new_ops_runtime_cap.rs  performance.rs  permissions.rs  policy.rs  policy_io.rs  read.rs  secrets.rs  traversal.rs  windows.rs
crates/omne-fs/tests/common/: mod.rs  unix_helpers.rs
crates/omne-fs/tests/new_ops/: deny_and_delete.rs
crates/omne-fs/tests/permissions/: root_not_found.rs
crates/omne-host-info-primitives/: AGENTS.md  CHANGELOG.md  README.md
crates/omne-host-info-primitives/docs/: docs-system-map.md
crates/omne-host-info-primitives/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-host-info-primitives/src/: lib.rs
crates/omne-integrity-primitives/: AGENTS.md  Cargo.toml  README.md
crates/omne-integrity-primitives/docs/: docs-system-map.md
crates/omne-integrity-primitives/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-integrity-primitives/src/: lib.rs
crates/omne-process-primitives/: CHANGELOG.md  Cargo.toml  README.md
crates/omne-process-primitives/docs/architecture/: system-boundaries.md
crates/omne-process-primitives/src/: command_path.rs  host_command.rs  lib.rs
crates/omne-system-package-primitives/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/omne-system-package-primitives/docs/: docs-system-map.md
crates/omne-system-package-primitives/docs/architecture/: source-layout.md  system-boundaries.md
crates/omne-system-package-primitives/src/: lib.rs
docs/: README.md  docs-system-map.md  quality-and-doc-maintenance.md  source-layout.md  unsafe-boundary-adr.md  workspace-crate-boundaries.md
scripts/: check-docs-system.sh
