[package]
name = "omne-artifact-install-primitives"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
http-kit = { version = "0.1.0", git = "https://github.com/omne42/omne_foundation.git", rev = "7de481c4f3f78ca36ad56b0cdd09dc0043f5d441" }
omne-archive-primitives = { path = "../omne-archive-primitives" }
omne-fs-primitives = { path = "../omne-fs-primitives" }
omne-integrity-primitives = { path = "../omne-integrity-primitives" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
zip = "0.6"
