[package]
name = "omne-execution-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4"
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
policy-meta = { path = "../../../omne_foundation/crates/policy-meta" }

[dev-dependencies]
tempfile = "3"
