[package]
name = "omne-execution-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4"
omne-fs-primitives = { path = "../omne-fs-primitives" }
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
policy-meta = { path = "../../../omne_foundation/crates/policy-meta" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
