[package]
name = "omne-execution-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
fs2 = "0.4"
omne-fs-primitives = { path = "../omne-fs-primitives" }
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
policy-meta = { version = "0.1.0", git = "https://github.com/omne42/omne_foundation.git", rev = "7de481c4f3f78ca36ad56b0cdd09dc0043f5d441" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
