[package]
name = "omne-fs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Omne filesystem runtime crate for policy-bounded filesystem operations."
readme = "README.md"
publish = false

[dependencies]
diffy = { version = "0.4", optional = true }
globset = "0.4"
memchr = "2"
regex = "1"
omne-fs-primitives = { path = "../omne-fs-primitives" }
serde = { version = "1", features = ["derive"] }
same-file = "1"
tempfile = "3"
thiserror = "1"
policy-meta = { version = "0.1.0", git = "ssh://mac@gitea-personal/omne/omne_foundation.git", rev = "7de481c4f3f78ca36ad56b0cdd09dc0043f5d441" }
toml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
walkdir = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "perf_ops"
harness = false

[features]
default = ["glob", "grep", "patch"]
glob = ["dep:walkdir"]
grep = ["dep:walkdir"]
patch = ["dep:diffy"]
policy-io = ["dep:toml", "dep:serde_json"]
