[package]
name = "omne-fs-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "CLI for omne-fs."
publish = false

[[bin]]
name = "omne-fs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
omne-fs = { path = "..", default-features = false, features = ["glob", "grep", "patch", "policy-io"] }
omne-fs-primitives = { path = "../../omne-fs-primitives" }
policy-meta = { path = "../../../../omne_foundation/crates/policy-meta" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
